--- a/toolproj/cscodetest.csproj
+++ b/toolproj/cscodetest.csproj
@@ -64,7 +64,6 @@
     <Compile Include="bin\csproj\AnimationEvent.cs" />
     <Compile Include="bin\csproj\AnimationPlayMode.cs" />
     <Compile Include="bin\csproj\AnimationState.cs" />
-    <Compile Include="bin\csproj\Animation_Enumerator.cs" />
     <Compile Include="bin\csproj\Animator.cs" />
     <Compile Include="bin\csproj\AnimatorClipInfo.cs" />
     <Compile Include="bin\csproj\AnimatorControllerParameter.cs" />
@@ -233,8 +232,6 @@
     <Compile Include="bin\csproj\Experimental.Networking.MultipartFormDataSection.cs" />
     <Compile Include="bin\csproj\Experimental.Networking.MultipartFormFileSection.cs" />
     <Compile Include="bin\csproj\Experimental.Networking.UnityWebRequest.cs" />
-    <Compile Include="bin\csproj\Experimental.Networking.UnityWebRequest_UnityWebRequestError.cs" />
-    <Compile Include="bin\csproj\Experimental.Networking.UnityWebRequest_UnityWebRequestMethod.cs" />
     <Compile Include="bin\csproj\Experimental.Networking.UploadHandler.cs" />
     <Compile Include="bin\csproj\Experimental.Networking.UploadHandlerRaw.cs" />
     <Compile Include="bin\csproj\FFTWindow.cs" />
@@ -269,12 +266,9 @@
     <Compile Include="bin\csproj\GUILayer.cs" />
     <Compile Include="bin\csproj\GUILayout.cs" />
     <Compile Include="bin\csproj\GUILayoutOption.cs" />
-    <Compile Include="bin\csproj\GUILayoutOption_Type.cs" />
     <Compile Include="bin\csproj\GUILayoutUtility.cs" />
-    <Compile Include="bin\csproj\GUILayoutUtility_LayoutCache.cs" />
     <Compile Include="bin\csproj\GUILayout_AreaScope.cs" />
     <Compile Include="bin\csproj\GUILayout_HorizontalScope.cs" />
-    <Compile Include="bin\csproj\GUILayout_LayoutedWindow.cs" />
     <Compile Include="bin\csproj\GUILayout_ScrollViewScope.cs" />
     <Compile Include="bin\csproj\GUILayout_VerticalScope.cs" />
     <Compile Include="bin\csproj\GUISettings.cs" />
@@ -289,7 +283,6 @@
     <Compile Include="bin\csproj\GUI_GroupScope.cs" />
     <Compile Include="bin\csproj\GUI_Scope.cs" />
     <Compile Include="bin\csproj\GUI_ScrollViewScope.cs" />
-    <Compile Include="bin\csproj\GUI_ScrollViewState.cs" />
     <Compile Include="bin\csproj\Gyroscope.cs" />
     <Compile Include="bin\csproj\Handheld.cs" />
     <Compile Include="bin\csproj\Hash128.cs" />
@@ -406,42 +399,6 @@
     <Compile Include="bin\csproj\Network.cs" />
     <Compile Include="bin\csproj\NetworkConnectionError.cs" />
     <Compile Include="bin\csproj\NetworkDisconnection.cs" />
-    <Compile Include="bin\csproj\Networking.ChannelQOS.cs" />
-    <Compile Include="bin\csproj\Networking.ConnectionConfig.cs" />
-    <Compile Include="bin\csproj\Networking.ConnectionSimulatorConfig.cs" />
-    <Compile Include="bin\csproj\Networking.GlobalConfig.cs" />
-    <Compile Include="bin\csproj\Networking.HostTopology.cs" />
-    <Compile Include="bin\csproj\Networking.Match.BasicResponse.cs" />
-    <Compile Include="bin\csproj\Networking.Match.CreateDedicatedMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.CreateDedicatedMatchResponse.cs" />
-    <Compile Include="bin\csproj\Networking.Match.CreateMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.CreateMatchResponse.cs" />
-    <Compile Include="bin\csproj\Networking.Match.CreateOrJoinMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.DestroyMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.DropConnectionRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.IResponse.cs" />
-    <Compile Include="bin\csproj\Networking.Match.JoinMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.JoinMatchResponse.cs" />
-    <Compile Include="bin\csproj\Networking.Match.ListMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.ListMatchResponse.cs" />
-    <Compile Include="bin\csproj\Networking.Match.MatchDesc.cs" />
-    <Compile Include="bin\csproj\Networking.Match.MatchDirectConnectInfo.cs" />
-    <Compile Include="bin\csproj\Networking.Match.MatchInfo.cs" />
-    <Compile Include="bin\csproj\Networking.Match.NetworkMatch.cs" />
-    <Compile Include="bin\csproj\Networking.Match.StopDedicatedMatchRequest.cs" />
-    <Compile Include="bin\csproj\Networking.Match.StopDedicatedMatchResponse.cs" />
-    <Compile Include="bin\csproj\Networking.NetworkError.cs" />
-    <Compile Include="bin\csproj\Networking.NetworkEventType.cs" />
-    <Compile Include="bin\csproj\Networking.NetworkTransport.cs" />
-    <Compile Include="bin\csproj\Networking.QosType.cs" />
-    <Compile Include="bin\csproj\Networking.ReactorModel.cs" />
-    <Compile Include="bin\csproj\Networking.Types.AppID.cs" />
-    <Compile Include="bin\csproj\Networking.Types.NetworkAccessLevel.cs" />
-    <Compile Include="bin\csproj\Networking.Types.NetworkAccessToken.cs" />
-    <Compile Include="bin\csproj\Networking.Types.NetworkID.cs" />
-    <Compile Include="bin\csproj\Networking.Types.NodeID.cs" />
-    <Compile Include="bin\csproj\Networking.Types.SourceID.cs" />
-    <Compile Include="bin\csproj\Networking.Utility.cs" />
     <Compile Include="bin\csproj\NetworkLogLevel.cs" />
     <Compile Include="bin\csproj\NetworkMessageInfo.cs" />
     <Compile Include="bin\csproj\NetworkPeerType.cs" />
@@ -693,9 +650,7 @@
     <Compile Include="bin\csproj\TextAsset.cs" />
     <Compile Include="bin\csproj\TextClipping.cs" />
     <Compile Include="bin\csproj\TextEditor.cs" />
-    <Compile Include="bin\csproj\TextEditor_CharacterType.cs" />
     <Compile Include="bin\csproj\TextEditor_DblClickSnapping.cs" />
-    <Compile Include="bin\csproj\TextEditor_TextEditOp.cs" />
     <Compile Include="bin\csproj\TextGenerationSettings.cs" />
     <Compile Include="bin\csproj\TextGenerator.cs" />
     <Compile Include="bin\csproj\TextMesh.cs" />
@@ -718,7 +673,6 @@
     <Compile Include="bin\csproj\TrackedReference.cs" />
     <Compile Include="bin\csproj\TrailRenderer.cs" />
     <Compile Include="bin\csproj\Transform.cs" />
-    <Compile Include="bin\csproj\Transform_Enumerator.cs" />
     <Compile Include="bin\csproj\TransparencySortMode.cs" />
     <Compile Include="bin\csproj\Tree.cs" />
     <Compile Include="bin\csproj\TreeInstance.cs" />
@@ -760,6 +714,7 @@
     <Compile Include="bin\csproj\WWW.cs" />
     <Compile Include="bin\csproj\WWWForm.cs" />
     <Compile Include="bin\csproj\YieldInstruction.cs" />
+    <Compile Include="recallunity\exportattr\ConvertTool.cs" />
     <Compile Include="recallunity\exportattr\exportattr.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
