--- a/toolproj/tscodetest.csproj
+++ b/toolproj/tscodetest.csproj
@@ -22,212 +22,7 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="bin\tsproj\AnimationBlendMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnimationCullingType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnimationPlayMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnimatorControllerParameterType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnimatorCullingMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnimatorRecorderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnimatorUpdateMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AnisotropicFiltering.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ApplicationInstallMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ApplicationSandboxType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioClipLoadType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioCompressionFormat.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioDataLoadState.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioReverbPreset.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioRolloffMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioSourceCurveType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioSpeakerMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AudioVelocityUpdateMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AvatarIKGoal.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AvatarIKHint.ts" />
-    <TypeScriptCompile Include="bin\tsproj\AvatarTarget.ts" />
-    <TypeScriptCompile Include="bin\tsproj\BlendWeights.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CameraClearFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CameraType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CollisionDetectionMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CollisionDetectionMode2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CollisionFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ColorSpace.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ComputeBufferType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ConfigurableJointMotion.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ConnectionTesterStatus.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CubemapFace.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CursorLockMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\CursorMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\DepthTextureMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\DetailRenderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\DeviceOrientation.ts" />
-    <TypeScriptCompile Include="bin\tsproj\DeviceType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\DrivenTransformProperties.ts" />
-    <TypeScriptCompile Include="bin\tsproj\EffectorForceMode2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\EffectorSelection2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\EventModifiers.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Events.PersistentListenerMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Events.UnityEventCallState.ts" />
-    <TypeScriptCompile Include="bin\tsproj\EventType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Experimental.Director.DirectorUpdateMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Experimental.Director.PlayState.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Experimental.Networking.UnityWebRequest_UnityWebRequestError.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Experimental.Networking.UnityWebRequest_UnityWebRequestMethod.ts" />
-    <TypeScriptCompile Include="bin\tsproj\FFTWindow.ts" />
-    <TypeScriptCompile Include="bin\tsproj\FilterMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\FocusType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\FogMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\FontStyle.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ForceMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ForceMode2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\GITextureType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\GUILayoutOption_Type.ts" />
-    <TypeScriptCompile Include="bin\tsproj\HideFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\HorizontalWrapMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\HumanBodyBones.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ImagePosition.ts" />
-    <TypeScriptCompile Include="bin\tsproj\IMECompositionMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\JointDriveMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\JointLimitState2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\JointProjectionMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\KeyCode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LightmapsMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LightmapsModeLegacy.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LightmapType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LightRenderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LightShadows.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LightType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LocationServiceStatus.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LODFadeMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\LogType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\MasterServerEvent.ts" />
-    <TypeScriptCompile Include="bin\tsproj\MaterialGlobalIlluminationFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\MeshTopology.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NavMeshObstacleShape.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NavMeshPathStatus.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NetworkConnectionError.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NetworkDisconnection.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Networking.NetworkError.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Networking.NetworkEventType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Networking.QosType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Networking.ReactorModel.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Networking.Types.NetworkAccessLevel.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Networking.Types.NodeID.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NetworkLogLevel.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NetworkPeerType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NetworkReachability.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NetworkStateSynchronization.ts" />
-    <TypeScriptCompile Include="bin\tsproj\NPOTSupport.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ObstacleAvoidanceType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\OffMeshLinkType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleRenderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemAnimationType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemCollisionMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemCollisionQuality.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemCollisionType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemCurveMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemEmissionType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemGradientMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemInheritVelocityMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemMeshShapeType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemRenderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemRenderSpace.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemScalingMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemShapeType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemSimulationSpace.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ParticleSystemSortMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\PhysicMaterialCombine.ts" />
-    <TypeScriptCompile Include="bin\tsproj\PlayMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\PrimitiveType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ProceduralCacheSize.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ProceduralLoadingBehavior.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ProceduralOutputType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ProceduralProcessorUsage.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ProceduralPropertyType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\QualityLevel.ts" />
-    <TypeScriptCompile Include="bin\tsproj\QueryTriggerInteraction.ts" />
-    <TypeScriptCompile Include="bin\tsproj\QueueMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RectTransform_Axis.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RectTransform_Edge.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.AmbientMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.BlendMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.BlendOp.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.BuiltinRenderTextureType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.BuiltinShaderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.BuiltinShaderType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.CameraEvent.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ColorWriteMask.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.CompareFunction.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.CullMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.DefaultReflectionMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.GraphicsDeviceType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.LightEvent.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.OpaqueSortMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.PassType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionCubemapCompression.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionProbeClearFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionProbeMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionProbeRefreshMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionProbeTimeSlicingMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionProbeType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ReflectionProbeUsage.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.RenderBufferLoadAction.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.RenderBufferStoreAction.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ShadowCastingMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.ShadowSamplingMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Rendering.StencilOp.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RenderingPath.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RenderMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RenderTextureFormat.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RenderTextureReadWrite.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RigidbodyConstraints.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RigidbodyConstraints2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RigidbodyInterpolation.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RigidbodyInterpolation2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RigidbodySleepMode2D.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RotationDriveMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RPCMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RuntimeInitializeLoadType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\RuntimePlatform.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ScaleMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SceneManagement.LoadSceneMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ScreenOrientation.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SendMessageOptions.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ShadowProjection.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SkinQuality.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SocialPlatforms.TimeScope.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SocialPlatforms.UserScope.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SocialPlatforms.UserState.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Space.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SpriteAlignment.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SpriteMeshType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SpritePackingMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SpritePackingRotation.ts" />
-    <TypeScriptCompile Include="bin\tsproj\StackTraceLogType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\SystemLanguage.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TerrainRenderFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\Terrain_MaterialType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TexGenMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextAlignment.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextAnchor.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextClipping.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextEditor_CharacterType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextEditor_DblClickSnapping.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextEditor_TextEditOp.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextureFormat.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TextureWrapMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\ThreadPriority.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TouchPhase.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TouchScreenKeyboardType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TouchType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TransparencySortMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\TypeInferenceRules.ts" />
-    <TypeScriptCompile Include="bin\tsproj\UserAuthorization.ts" />
-    <TypeScriptCompile Include="bin\tsproj\VerticalWrapMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\VR.VRDeviceType.ts" />
-    <TypeScriptCompile Include="bin\tsproj\VR.VRNode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\WebCamFlags.ts" />
-    <TypeScriptCompile Include="bin\tsproj\WindZoneMode.ts" />
-    <TypeScriptCompile Include="bin\tsproj\WrapMode.ts" />
+    <Folder Include="bin\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
